# aviary

./: .env.example  .gitignore  CLAUDE.md  README.ko.md  README.md  compose.deps.yml  compose.infra.yml  compose.yml  config.example.yaml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
admin/: Dockerfile  pyproject.toml
admin/app/: config.py  db.py  flash.py  main.py  templates.py
admin/app/clients/: keycloak.py  supervisor.py  vault.py
admin/app/routers/: agents.py  deployments.py  mcp.py  pages.py  policies.py  users.py  workflows.py
admin/app/services/: agent_lifecycle.py  controller_client.py  redis_service.py  scaling_service.py  supervisor_client.py
admin/app/static/: style.css
admin/app/templates/: agent_detail.html  agents.html  base.html  mcp_server_detail.html  mcp_servers.html  user_detail.html  workflow_detail.html  workflows.html
admin/tests/: conftest.py  test_agents.py  test_deployments.py  test_policies.py
agent-supervisor/: Dockerfile  entrypoint.sh  pyproject.toml
agent-supervisor/app/: assembly.py  config.py  db.py  main.py  manifests.py  metrics.py  provisioning.py  redis_client.py  routing.py  scaling.py
agent-supervisor/app/auth/: dependencies.py  oidc.py
agent-supervisor/app/backends/: __init__.py  docker.py  fargate.py  protocol.py
agent-supervisor/app/routers/: agents.py  deployments.py  health.py  stream.py  streaming.py
agent-supervisor/app/services/: activity.py  cleanup.py  identity.py  k8s_proxy.py  llm_backends_resolver.py  network_policy.py  runtime_env.py  runtime_proxy.py  scaling.py  stream_service.py  streaming.py  vault_client.py
agent-supervisor/tests/: conftest.py  test_assembly.py  test_eks_fargate_backend.py  test_eks_native_backend.py  test_metrics.py  test_publish_stream.py  test_routing.py  test_runtime_proxy.py  test_stream.py  test_stream_lifecycle.py  test_vault_client.py  test_worker_auth.py  test_workspace_proxy.py
api/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
api/app/: config.py  deps.py  identity.py  main.py
api/app/auth/: dependencies.py  oidc.py  session_store.py  ws.py
api/app/db/: models.py  session.py
api/app/routers/: a2a.py  agent_autocomplete.py  agents.py  auth.py  catalog.py  catalog_imports.py  catalog_publisher.py  credentials.py  health.py  inference.py  mcp.py  me.py  messages.py  sessions.py  uploads.py  workflows.py
api/app/schemas/: agent.py  (+9 more)
api/tests/: conftest.py  test_acl.py  test_agents.py  test_catalog_browse.py  test_catalog_coverage.py  test_catalog_e2e.py  test_catalog_import_fork.py  test_publish_flow.py  test_session_deletion.py  test_sessions.py  test_workflows.py  test_workspace.py
mcp-gateway/: Dockerfile  entrypoint.sh  pyproject.toml
mcp-gateway/app/: auth.py  config.py  connection_pool.py  gateway_server.py  main.py  platform_servers.py  secret_injection.py  vault_client.py
mcp-gateway/config/: secret-injection.yaml
test-client/: pyproject.toml  test_api.py  test_e2e.py
tests/: pyproject.toml
tests/e2e/: test_api.py  test_supervisor.py
(+503 files in other folders)
