[project]
name = "aviary-tests"
version = "0.2.0"
description = "Aviary test suites"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "websockets>=13.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
